syntax = "proto3";
package msg;

option go_package = "github.com/rflandau/Orv/implementations/slims/orv/pb/";

// MessageType enumerates the number associated to each packet tyoe
enum MessageType {
  UNKNOWN = 0;
  FAULT = 1;
  HELLO = 2;
  HELLO_ACK = 3;
  JOIN = 4;
  JOIN_ACCEPT = 5;
  REGISTER = 6;
  REGISTER_ACCEPT = 7;
  DEREGISTER = 8;
  DEREGISTER_ACK = 9;
  MERGE = 10;
  MERGE_ACCEPT = 11;
  INCREMENT = 12;
  INCREMENT_ACK = 13;
  SERVICE_HEARTBEAT = 14;
  SERVICE_HEARTBEAT_ACK = 15;
  VK_HEARTBEAT = 16;
  VK_HEARTBEAT_ACK = 17;
  // client
  STATUS = 18;
  STATUS_RESP = 19;
  LIST = 20;
  LIST_ACK = 21;
  LIST_RESP = 22;
  GET = 23;
  GET_ACK = 24;
  GET_RESP = 25;
}